--- a/WinMouseJiggler/MainWindow.xaml
+++ b/WinMouseJiggler/MainWindow.xaml
@@ -7,6 +7,8 @@
         mc:Ignorable="d"
         Title="MainWindow" Height="350" Width="525">
     <Grid>
-        
+        <CheckBox x:Name = "MainCheckBox" Content = "Jiggle Mouse" HorizontalAlignment = "Center" 
+                  VerticalAlignment = "Center" Checked = "HandleCheck" 
+                  Unchecked = "HandleUnchecked" Width = "90"/>
     </Grid>
 </Window>
