--- a/WinMouseJiggler/MainWindow.xaml
+++ b/WinMouseJiggler/MainWindow.xaml
@@ -5,7 +5,7 @@
         xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006"
         xmlns:local="clr-namespace:WinMouseJiggler"
         mc:Ignorable="d"
-        Title="MainWindow" Height="350" Width="525">
+        Title="WinMouseJiggler" Height="350" Width="525">
     <Grid>
         <CheckBox x:Name = "MainCheckBox" Content = "Jiggle Mouse" HorizontalAlignment = "Center" 
                   VerticalAlignment = "Center" Checked = "HandleCheck" 
